# MinkowskiHull3D

./: .gitignore  CMakeLists.txt  Perf.cpp  Perf.h  gl_includes.h  hull3D.cpp  hull3D.h  loader.cpp  loader.h  main.cpp
assets/: config.txt
